# django-microapi

./: .gitignore  .readthedocs.yaml  AUTHORS.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: just_test.yml
docs/: conf.py  index.rst
docs/api/: exceptions.rst  http.rst  serializers.rst  tests.rst  views.rst
docs/usage/: quickstart.rst  testing.rst  tutorial.rst
src/microapi/: __init__.py  exceptions.py  http.py  serializers.py  tests.py  views.py
test/config/: settings.py  urls.py
test/test_microapi/: apps.py  models.py  urls.py  views.py
test/test_microapi/migrations/: 0001_initial.py  0002_alter_blogpost_published_on_alter_blogpost_slug.py
test/test_microapi/tests/: test_serializers.py  test_views.py
